add step to NumberSettings (#5)