@@ -15,14 +15,14 @@ import org.lwjgl.nanovg.NVGPaint;
 public class DoubleElement extends AbstractSettingElement<DoubleSetting> {
     private boolean dragging = false;
 
-    public DoubleElement(DoubleSetting setting, float x, float y, float width, float height){
+    public DoubleElement(DoubleSetting setting, float x, float y, float width, float height) {
         super(setting, x, y, width, height);
     }
 
     @Override
     public void render(DrawContext context, double mouseX, double mouseY, float delta, float offset) {
         NVGPaint paint = NanoVGUtils.linearGradient(x + 30, offset + 26, x + width - 30, offset + 45, SimpleColor.of(0xFFFAC0FF), SimpleColor.of(0xFFB3A5FF), NanoVGUtils.Orientation.HORIZONTAL);
-        NanoVGUtils.ntr.draw(t.getName()+ " : " + String.format("%.6f", t.getValue()), x + 30, offset + 5, 22, 0xffffffff);
+        NanoVGUtils.ntr.draw(t.getName() + " : " + String.format("%.6f", t.getValue()), x + 30, offset + 5, 22, 0xffffffff);
         NanoVGUtils.stroke(2F);
         NanoVGUtils.rounded(x + 29, offset + 25, width - 58, 16, 8, SimpleColor.of(0x59000000), NanoVGUtils.Pattern.STROKE);
         NanoVGUtils.stroke(1F);
@@ -30,9 +30,11 @@ public class DoubleElement extends AbstractSettingElement<DoubleSetting> {
         if (t.getValue() > t.getMin()) NanoVGUtils.rounded(x + 30, offset + 26, (float) ((width - 60) * Math.clamp(0, 1, (t.getValue() / (t.getMax() - t.getMin())))), 14, 7, paint, NanoVGUtils.Pattern.FILL);
 
         if ((GLFW.glfwGetMouseButton(client.getWindow().getHandle(), GLFW.GLFW_MOUSE_BUTTON_LEFT) == GLFW.GLFW_PRESS)) {
-            if ((MouseUtils.hover(mouseX, mouseY, x + 30, offset + 36, width - 60, 14) && !ClickGuiScreen.INSTANCE.isDragging) || dragging) {
+            if ((MouseUtils.hover(mouseX, mouseY, x + 30, offset + 26, width - 60, 14) && !ClickGuiScreen.INSTANCE.isDragging) || dragging) {
                 float p = (float) ((mouseX - (x + 30)) / (width - 60));
-                t.setValue(Math.clamp(t.getMin(), t.getMax(), (int) t.getMin() + (t.getMax() - t.getMin()) * p));
+                double value = Math.clamp(t.getMin(), t.getMax(), (int) t.getMin() + (t.getMax() - t.getMin()) * p);
+                double rounded = Math.max(t.getMin(), Math.min(t.getMax(), Math.round(value / t.getStep()) * t.getStep()));
+                t.setValue(rounded);
                 dragging = true;
                 ClickGuiScreen.INSTANCE.isDragging = true;
             }
